--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: FARLert
 description: A responsive, professional, clean-looking dialog/alert system
+logo: https://raw.githubusercontent.com/ryanwans/FARlert/master/logoSquare.png
